feat: Adicionando tabela de tags_paciente
